Started Calculator component. Currently working with Bitcoin USD rate.

--- a/src/public/base.css
+++ b/src/public/base.css
@@ -50,9 +50,10 @@ table {
 
 
 /*
-    Blockchain global styles
+    global styles
 */
 body {
-    background: #efefef;
+    background: #fff;
     font-family: verdana;
+    min-width: 480px;
 }
