Restructure of components. Moved store connect to container components.

--- a/src/public/base.css
+++ b/src/public/base.css
@@ -53,7 +53,7 @@ table {
     global styles
 */
 body {
-    background: #fff;
+    background: #efefef;
     font-family: verdana;
     min-width: 480px;
 }
