--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -12,13 +12,21 @@ p.text__body-copy {
     line-height: 2;
 }
 
-.text__bold {
+.text__bold,
+strong {
     font-weight: bold;
 }
 
 a {
     color: #09c;
+
+    &:hover {
+        text-decoration: none;
+    }
 }
-a:hover {
-    text-decoration: none;
+
+.text-hide {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
 }
