--- a/src/app/containers/HeaderNav/style.scss
+++ b/src/app/containers/HeaderNav/style.scss
@@ -29,14 +29,30 @@
     position: absolute;
     right: 0;
     top: 60px;
+}
+
+.nav__menu-list {
+    float: left;
+    margin: 20px 15px 10px;
+
+    p {
+        color: #aaa;
+        margin-bottom: 10px;
+        text-align: center;
+    }
 
     li {
         cursor: pointer;
-        padding: 15px;
+        display: block;
 
-        &:hover {
-            background: #222;
-            color: #09c;
+        a {
+            display: block;
+            padding: 15px 10px;
+
+            &:hover {
+                background: #222;
+                color: #09c;
+            }
         }
 
         &:last-child {
